--- a/package.json
+++ b/package.json
@@ -17,34 +17,38 @@
     "@babel/core": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
     "babel-loader": "^8.2.5",
+    "codeceptjs": "^3.3.3",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
-    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint": "^8.18.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-codeceptjs": "^1.3.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jasmine": "^4.1.3",
     "html-webpack-plugin": "^5.5.0",
     "http-server": "^14.1.1",
     "jasmine-ajax": "^4.0.0",
-    "jasmine-core": "^4.5.0",
-    "karma": "^6.4.1",
+    "jasmine-core": "^4.2.0",
+    "karma": "^5.2.3",
     "karma-chrome-launcher": "^3.1.1",
+    "karma-eslint": "^2.2.0",
     "karma-firefox-launcher": "^2.1.2",
-    "karma-jasmine": "^5.1.0",
+    "karma-jasmine": "^4.0.2",
     "karma-sourcemap-loader": "^0.3.8",
     "karma-webpack": "^5.0.0",
-    "lint": "^0.8.8",
+    "puppeteer": "^14.4.1",
     "style-loader": "^3.3.1",
-    "url-loader": "^4.1.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.2",
     "webpack-merge": "^5.8.0",
     "whatwg-fetch": "^3.6.2",
-    "workbox-webpack-plugin": "^6.5.4"
+    "workbox-webpack-plugin": "^6.5.3"
   },
   "dependencies": {
-    "idb": "^7.1.1",
-    "regenerator-runtime": "^0.13.9"
+    "idb": "^7.0.1",
+    "regenerator-runtime": "^0.13.9",
+    "workbox-window": "^6.5.3"
   }
 }
