test: e2e test for favorite restaurant

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "webpack --config webpack.prod.js",
     "start": "http-server dist -o",
     "test": "karma start",
-    "lint": "eslint ./src/**/*.js"
+    "lint": "eslint ./src/**/*.js",
+    "e2e": "codeceptjs run --steps --verbose"
   },
   "keywords": [],
   "author": "your_name <your.email@domain.com>",
@@ -17,8 +18,8 @@
     "@babel/core": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
     "babel-loader": "^8.2.5",
-    "codeceptjs": "^3.3.3",
     "clean-webpack-plugin": "^4.0.0",
+    "codeceptjs": "^3.3.3",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "eslint": "^8.18.0",
@@ -37,7 +38,8 @@
     "karma-jasmine": "^4.0.2",
     "karma-sourcemap-loader": "^0.3.8",
     "karma-webpack": "^5.0.0",
-    "puppeteer": "^14.4.1",
+    "playwright": "^1.29.1",
+    "puppeteer": "^19.4.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
