--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "karma-webpack": "^5.0.0",
     "playwright": "^1.29.1",
     "puppeteer": "^19.4.1",
+    "sharp": "^0.31.3",
     "style-loader": "^3.3.1",
     "webpack": "^5.73.0",
+    "webpack-bundle-analyzer": "^4.7.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.2",
     "webpack-merge": "^5.8.0",
@@ -50,6 +52,7 @@
   },
   "dependencies": {
     "idb": "^7.0.1",
+    "lazysizes": "^5.3.2",
     "regenerator-runtime": "^0.13.9",
     "workbox-window": "^6.5.3"
   }
