--- a/package.json
+++ b/package.json
@@ -47,13 +47,14 @@
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.2",
     "webpack-merge": "^5.8.0",
-    "whatwg-fetch": "^3.6.2",
-    "workbox-webpack-plugin": "^6.5.3"
+    "whatwg-fetch": "^3.6.2"
   },
   "dependencies": {
     "idb": "^7.0.1",
     "lazysizes": "^5.3.2",
     "regenerator-runtime": "^0.13.9",
+    "workbox-precaching": "^6.5.4",
+    "workbox-webpack-plugin": "^6.5.4",
     "workbox-window": "^6.5.3"
   }
 }
